[tool.poetry]
name = "apple-health-visualization"
version = "0.1.0"
description = ""
authors = ["Boru <boru0713@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.0"
streamlit = "^1.36.0"
matplotlib = "^3.9.0"
faker = "^26.0.0"
lxml = "^5.2.2"
pyarrow = "^16.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
